<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="387dp"
        android:layout_height="474dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.421">

        <LinearLayout
            android:id="@+id/base_amount"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amount"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/bill_amount"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_amount"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/bill_amount_hint"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <TextView
            android:id="@+id/tip_percentage"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/tip_percentage"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/percentageBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/TipBar"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:max="30" />

            <TextView
                android:id="@+id/percentageValue"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="0%"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tipReview"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/CalculateTip"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tip"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_tip"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tipAmount"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="00.00"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalbill"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_bill"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/finalBill"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="00.00"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>